fix dash header z-index

--- a/client/css/octofarm.css
+++ b/client/css/octofarm.css
@@ -267,7 +267,6 @@ a.notyet {
 }
 .dashHeader {
   padding: 5px;
-  z-index:100;
 }
 
 .dashBody {
